# HospiCare

./: .gitignore  README.md  docker-compose.yml  how to run local host 4200  howtorun.txt
RTSP_campy/: requirement.txt  stream.js  test.py
RTSP_campy/drowsiness_ONNX/: CMakeLists.txt  README.md
RTSP_campy/drowsiness_ONNX/scripts/: export_onnx.py  setup_onnxruntime.sh
RTSP_campy/drowsiness_ONNX/src/: main.cpp
RTSP_campy/drowsiness_detection/: drowsiness.py
json/: bundles.json  dashboard.json
thingsboard/: README.md  run-backend.sh
thingsboard/application/src/main/resources/: thingsboard.yml
thingsboard/msa/tb/: pom.xml
thingsboard/msa/tb/docker-cassandra/: Dockerfile
thingsboard/ui-ngx/src/: index.html  styles.scss  theme.scss
thingsboard/ui-ngx/src/app/: app.component.ts
thingsboard/ui-ngx/src/assets/dashboard/: api_usage.json  customer_user_home_page.json  sys_admin_home_page.json  tenant_admin_home_page.json
thingsboard/ui-ngx/src/assets/locale/: locale.constant-ar_AE.json  locale.constant-ca_ES.json  locale.constant-cs_CZ.json  locale.constant-da_DK.json  locale.constant-de_DE.json  locale.constant-el_GR.json  locale.constant-en_US.json  locale.constant-es_ES.json  locale.constant-fa_IR.json  locale.constant-fr_FR.json  locale.constant-it_IT.json  locale.constant-ja_JP.json  locale.constant-ka_GE.json  locale.constant-ko_KR.json  locale.constant-lt_LT.json  locale.constant-lv_LV.json  locale.constant-nl_BE.json  locale.constant-nl_NL.json  locale.constant-no_NO.json  locale.constant-pl_PL.json  locale.constant-pt_BR.json  locale.constant-ro_RO.json  locale.constant-sl_SI.json  locale.constant-tr_TR.json  locale.constant-uk_UA.json  locale.constant-zh_CN.json  locale.constant-zh_TW.json
thingsboard/ui-ngx/src/assets/map/: enhanced_contrast_hybrid_reference_style.json  (+2 more)
thingsboard/ui-ngx/src/environments/: environment.prod.ts  environment.ts
thingsboard/ui-ngx/src/scss/: constants.scss
(+182 files in other folders)
